module_name = get_path_info(rebase_path("."), "name")

group(module_name) {
    deps = []
    deps += [
        "arch",
        "test",
        "lib",
        "dev",
        "core",
    ]
}

config("kernel") {
    include_dirs = [
        "./include",
    ]
    configs = []
    configs += [
        "arch:kernel",
        "test:kernel",
        "lib:kernel",
        "dev:kernel",
        "core:kernel",
        "board:kernel",
    ]
}