module_name = get_path_info(rebase_path("."), "name")

group(module_name) {
    deps = []
    deps += [
        "libc",
        "libelf",
        "libsyscalls",
        "libutils",
    ]
}

config("kernel") {
    configs = []
    configs += [
        "libc:kernel",
        "libelf:kernel",
        "libsyscalls:kernel",
        "libutils:kernel",
    ]
}