module_name = get_path_info(rebase_path("."), "name")
source_set(module_name) {
    sources = [
        "entry.S",
        "setup.c",
    ]

    configs = [
        "//build/config:kernel",
    ]
}

config("kernel") {
    include_dirs =  [ "./include" ]
    include_dirs += [ "./include/armv8-a" ]
    include_dirs += [ "./include/asm" ]
}