module_name = get_path_info(rebase_path("."), "name")

source_set(module_name) {
    sources = [
        "boot/entry.S",
        "boot/setup.c",
        "boot/early_printf.c",
        "mm/mmu.c",
        "mm/cache.c",
        "mm/context.c",
        "mm/fault.c",
        "mm/pagetable.c",
        "mm/memory.c",
        "hyper/mmu-hyper.c",
        "hyper/vcpu.c",
        "kernel/cpu.c",
        "kernel/fpu.c",
        "kernel/halt.c",
        "kernel/idle.c",
        "kernel/traps.c",
        "kernel/vector.S",
    ]

    configs = [
        "//build/config:kernel",
    ]
}

config("kernel") {
    include_dirs =  [ "./include" ]
    include_dirs += [ "./include/asm" ]
}