module_name = get_path_info(rebase_path("."), "name")

source_set(module_name) {
    sources = [
        "mm_heap.c",
        "mm_buddy.c",
        "mm_bitmap.c",
        "mm_gran.c",
        "mm_graninfo.c",
        "mmap.c",
    ]

    configs = [
        "//build/config:kernel",
    ]
}

config("kernel") {
    include_dirs =  [ ]
}